remove clients and partners, remove all service except coating and container, remove antonio Muchado

--- a/views/_coating_solutions.haml
+++ b/views/_coating_solutions.haml
@@ -7,3 +7,20 @@
   coatings and available on three different substrates Steel, Polyester and
   Aluminum Base. Plus our company offers more than just the products.
   Our customers can count on our specialized technical services.
+	
+%h3 Key advantages:
+%ul.solution-list
+  %li Washout in plain tap water with a small amount of mild detergent.
+  %li Print quality is excellent with both water-based and alcohol-based ink.
+  %li High resolution and reproducibility provides sharp details.
+  %li Excellent ink transfer.
+  %li Excellent resistance to solvent ink. (type NS, NH, QS and QH)
+  %li Thickness tolerance allows for "kiss" impression settings.
+
+%h3 Applications:
+%ul.solution-list
+  %li UV / Solvent Spot coating
+  %li Flood coating
+  
+%h3 Stucture of the Plate:
+%img.structure{ :src => '/images/solutions/coating_structure.jpg', :alt => 'Container Plate Structure', :height => 205, :width => 400 }
