--- a/views/_container_solutions.haml
+++ b/views/_container_solutions.haml
@@ -6,3 +6,39 @@
   the required processing equipment for serving such products. In addition
   to all of our great products, our customers can count on us for
   comprehensive specialized technical services and support.
+
+%h3 Key advantages:
+%ul.solution-list
+  %li Washout with water
+  %li Transparent flexible plate
+  %li Slip coat protection 
+
+%h3 Properties:
+%ul.solution-list
+  %li.special Spectral sensitivity
+  %li.property 300–400nm
+  %li.special Thickness tolerance
+  %li.property ±10µm(Film base)
+  %li.property ±15µm(Metal base)
+  %li.special Resolving capability
+  %li.property 150–200 lines/inch
+  %li.special Minimum dot image
+  %li.property 0.10mm in diameter (0.004")
+  %li.special Minimum dot image
+  %li.property 0.03mm in width (0.0011")
+
+%h3 Applications:
+%ul.solution-list
+  %li 2 piece can 
+  %li Aerosol 2 piece can
+  %li Metal tubes
+  %li Plastic cups and buckets
+  %li Pad printing
+  %li Spot coating
+  %li Labels
+  %li Security printing
+  
+%h3 Stucture of the Plate:
+%img.structure{ :src => '/images/solutions/container_structure.jpg', :alt => 'Container Plate Structure', :height => 205, :width => 400 }
+  
+ 
