--- a/views/index.haml
+++ b/views/index.haml
@@ -2,17 +2,9 @@
   %section#our-solutions
     #slideshow
       %div.slide
-        %img{ :src => '/images/banners/card_solutions.png', :height => 171, :width => 526 }
-      %div.slide
         %img{ :src => '/images/banners/coating_solutions.png', :height => 171, :width => 526 }
       %div.slide
         %img{ :src => '/images/banners/container_solutions.png', :height => 171, :width => 526 }
-      %div.slide
-        %img{ :src => '/images/banners/equipment.png', :height => 171, :width => 526 }
-      %div.slide
-        %img{ :src => '/images/banners/inkjet_solutions.png', :height => 171, :width => 526 }
-      %div.slide
-        %img{ :src => '/images/banners/rfid.png', :height => 171, :width => 526 }
 
     #solutions-title Our Solutions
   
@@ -24,7 +16,7 @@
       service and product response time.
       There is simply no red tape to
       cut at Seven-Ogun International.”
-    .credit — Antonio L.V. Machado, owner
+    //.credit — Antonio L.V. Machado, owner
 
 #additional-information
   %section
@@ -42,8 +34,8 @@
       Seven-Ogun International is your one-stop boutique pre-press room
       specialists.To maximize response time, we carry inventory in-house to
       ensure our customer’s demands are always met in a timely manner. 
-    %img{ :src => '/images/partners-homepage.png', :alt => 'Partners' }
-    %a{ :href => '/clients-and-partners/ashworth', :class => 'more-button' } More <span>&raquo;</span>
+    //%img{ :src => '/images/partners-homepage.png', :alt => 'Partners' }
+    //%a{ :href => '/clients-and-partners/ashworth', :class => 'more-button' } More <span>&raquo;</span>
 
   %section
 
