Fix clear fix issue

--- a/views/_coating_solutions.haml
+++ b/views/_coating_solutions.haml
@@ -9,7 +9,7 @@
   Our customers can count on our specialized technical services.
 	
 %h3 Key advantages:
-%ul.solution-list
+%ul#solution-list
   %li Washout in plain tap water with a small amount of mild detergent.
   %li Print quality is excellent with both water-based and alcohol-based ink.
   %li High resolution and reproducibility provides sharp details.
@@ -18,7 +18,7 @@
   %li Thickness tolerance allows for "kiss" impression settings.
 
 %h3 Applications:
-%ul.solution-list
+%ul#solution-list
   %li UV / Solvent Spot coating
   %li Flood coating
   
