--- a/views/_container_solutions.haml
+++ b/views/_container_solutions.haml
@@ -8,13 +8,13 @@
   comprehensive specialized technical services and support.
 
 %h3 Key advantages:
-%ul.solution-list
+%ul#solution-list
   %li Washout with water
   %li Transparent flexible plate
   %li Slip coat protection 
 
 %h3 Properties:
-%ul.solution-list
+%ul#solution-list
   %li.special Spectral sensitivity
   %li.property 300–400nm
   %li.special Thickness tolerance
@@ -28,7 +28,7 @@
   %li.property 0.03mm in width (0.0011")
 
 %h3 Applications:
-%ul.solution-list
+%ul#solution-list
   %li 2 piece can 
   %li Aerosol 2 piece can
   %li Metal tubes
@@ -40,5 +40,3 @@
   
 %h3 Stucture of the Plate:
 %img.structure{ :src => '/images/solutions/container_structure.jpg', :alt => 'Container Plate Structure', :height => 205, :width => 400 }
-  
- 
