Edit descriptions for coating and containers

--- a/views/_coating_solutions.haml
+++ b/views/_coating_solutions.haml
@@ -1,12 +1,7 @@
 %img.overview{ :src => '/images/solutions/coating_solutions.png', :alt => 'Coating Solutions' }
 
 %p.solution-description
-  Complete Solutions for web and sheet fed printers. We offer
-  photopolymer coating plates, Processing Equipment and Film Printing
-  Equipment. Our coating plates are compatible with both UV and aqueous
-  coatings and available on three different substrates Steel, Polyester and
-  Aluminum Base. Plus our company offers more than just the products.
-  Our customers can count on our specialized technical services.
+  Complete Solutions for web and sheet fed printers. We offer photopolymer coating plates (Conventional and CTP), Processing Equipment and Film Printing Equipment. Our coating plates are compatible with both UV and aqueous coatings and available on three different substrates Steel, Polyester and Aluminum Base. Plus our company offers more than just the products. Our customers can count on our specialized technical services (24/7).
 	
 %h3 Key advantages:
 %ul#solution-list
