--- a/views/_container_solutions.haml
+++ b/views/_container_solutions.haml
@@ -1,11 +1,7 @@
 %img.overview{ :src => '/images/solutions/container_solutions.png', :alt => 'Container Solutions' }
 
 %p.solution-description
-  Seven-Ogun delivers complete solutions for all of your dry offset printer
-  needs. We offer photopolymer printing plates, printing blankets and all of
-  the required processing equipment for serving such products. In addition
-  to all of our great products, our customers can count on us for
-  comprehensive specialized technical services and support.
+  Seven-Ogun delivers complete solutions for all of your dry offset printer needs. We offer photopolymer printing plates (Conventional, CTP and DLE), printing blankets and all of the required processing equipment for serving such products. In addition to all of our great products, our customers can count on us (24/7) for comprehensive specialized technical services and support. 
 
 %h3 Key advantages:
 %ul#solution-list
