--- a/views/css/style.sass
+++ b/views/css/style.sass
@@ -42,7 +42,7 @@ body
   line-height: 2.2
   padding: 0 20px 0 54px
   text-transform: uppercase
-  width: 146px
+  width: 152px
 
   ul
 
@@ -56,7 +56,7 @@ body
         color: #B4975A
 
       & + li
-        border-top: 1px solid #d5d5d5
+        //border-top: 1px solid #d5d5d5
 
 #main
   border-left: 1px solid #d5d5d5
