Change dot to line

--- a/views/_container_solutions.haml
+++ b/views/_container_solutions.haml
@@ -20,7 +20,7 @@
   %li.property 150–200 lines/inch
   %li.special Minimum dot image
   %li.property 0.10mm in diameter (0.004")
-  %li.special Minimum dot image
+  %li.special Minimum line image
   %li.property 0.03mm in width (0.0011")
 
 %h3 Applications:
